--- a/source/admin/views/admin/common/header.ejs
+++ b/source/admin/views/admin/common/header.ejs
@@ -1,14 +1,14 @@
 <header id="header" class="navbar navbar-static-top">
     <div class="container-fluid">
         <div id="header-logo" class="navbar-header">
-            <a href="/" class="navbar-brand">
+            <a href="/admin/homepage" class="navbar-brand">
                 <img src="/image/common/logo.png" alt="Managment" title="Managment">
             </a>
         </div>
         <div class="nav navbar-nav navbar-right">
             <div class="row" style="width:400px">
                 <div class="col-md-8">
-                    <a href="">
+                    <a href="/admin/account/edit">
                         <i class="fas fa-user"></i>  <%= user.email %>
                     </a>
                 </div>
