--- a/source/admin/views/admin/course/categoryList.ejs
+++ b/source/admin/views/admin/course/categoryList.ejs
@@ -37,8 +37,8 @@
                                 <thead>
                                     <tr>
                                       <td class="text-left"><a>Tên</a></td>
-                                      <td class="text-left">Học sinh</td>
-                                      <td class="text-left"><a>Ngày đăng</a></td>
+                                      <td class="text-left">Số lượt xem</td>
+                                      <td class="text-left"><a>Số lượt đăng ký</a></td>
                                       <td class="text-left"><a>Action</a></td>
                                     </tr>
                                   </thead>
