--- a/source/admin/views/admin/common/login.ejs
+++ b/source/admin/views/admin/common/login.ejs
@@ -10,24 +10,17 @@
     <div class="wrapper fadeInDown" id="loginForm">
         <div id="formContent">
           <!-- Tabs Titles -->
-          <h2 class="active"> Sign In </h2>
-          <h2 class="inactive underlineHover">Sign Up </h2>
+          <h2 class="active"> Log in </h2>
       
-          <!-- Icon -->
-          <div class="fadeIn first">
-            <img src="http://danielzawadzki.com/codepen/01/icon.svg" id="icon" alt="User Icon" />
-          </div>
+     
           <!-- Login Form -->
           <form action="" method="post">
             <input type="text" id="email" class="fadeIn second" name="email" placeholder="login" value="<%= data.email%>">
-            <input type="text" id="password" class="fadeIn third" name="password" placeholder="password" value="<%= data.password%>">
+            <input type="password" id="password" class="fadeIn third" name="password" placeholder="password" value="<%= data.password%>">
             <input type="submit" class="fadeIn fourth" value="Log In">
           </form>
       
           <!-- Remind Passowrd -->
-          <div id="formFooter">
-            <a class="underlineHover" href="#">Forgot Password?</a>
-          </div>
       
         </div>
     </div>
