--- a/source/admin/views/admin/course/courseAdd.ejs
+++ b/source/admin/views/admin/course/courseAdd.ejs
@@ -56,7 +56,7 @@
                                     <h3 class="panel-title"><i class="fa fa-pencil"></i> Thông tin khóa học </h3>
                                 </div>
                                 <div class="panel-body">
-                                    <form action="#" method="post" id="frmAddCourse">
+                                    <form action="" method="post" id="frmAddCourse">
                                         <div class="course-detail">
                                             <div class="form-group hidden">
                                                 <label class="col-sm-2 control-label" for="my-input">Tên khóa học</label>
