--- a/source/admin/views/admin/student/studentAdd.ejs
+++ b/source/admin/views/admin/student/studentAdd.ejs
@@ -29,55 +29,62 @@
                     <h2><%= data.title %></h2>
                 </div>
             </div>
-            <div class="lecturer-add">
-                <form action="" method="post" id="frmAddStudent">
-                    <div class="user-info">
-                        <div class="row">
-                            <div class="col-sm-8 info">
-                                <div class="form-group">
-                                    <label class ="col-sm-2 control-label" for="my-input">Email:</label>
-                                    <div class="col-sm-10">
-                                        <input  class="form-control" type="text" name="email" value="">
-                                    </div>
+            <div class="lecturer-add course-info">
+                <div class="container-fluid">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h3 class="panel-title"><i class="fa fa-pencil"></i> Thông tin học viên </h3>
+                        </div>
+                        <div class="panel-body">
+                            <form action="" method="post" id="frmAddStudent">
+                                <div class="student-info">
+                                        <div class=" info">
+                                            <div class="form-group">
+                                                <label class ="col-sm-2 control-label" for="my-input">Email:</label>
+                                                <div class="col-sm-10">
+                                                    <input  class="form-control" type="text" name="email" value="">
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <label class ="col-sm-2 control-label" for="my-input">Name:</label>
+                                                <div class="col-sm-10">
+                                                    <input  class="form-control" type="text" name="name" value="" >
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <label class ="col-sm-2 control-label" for="my-input">Gender:</label>
+                                                <div class="col-sm-10">
+                                                    <select  class="form-control" type="text" name="gender">
+                                                            <option value="nam" selected="selected"> Nam</option>
+                                                            <option value="nữ"> Nữ</option>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                            <!-- <div class="form-group">
+                                                <label class ="col-sm-2 control-label" for="my-input">Description:</label>
+                                                <div class="col-sm-10">
+                                                    <textarea  class="form-control" type="text" name="description" ></textarea>
+                                                </div>
+                                            </div> -->
+                                           
+                                            <div class="form-group">
+                                                <label class ="col-sm-2 control-label" for="my-input">Password:</label>
+                                                <div class="col-sm-10">
+                                                    <input  class="form-control" type="password" name="password" value="" >
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <label class ="col-sm-2 control-label" for="my-input">Confirm:</label>
+                                                <div class="col-sm-10">
+                                                    <input  class="form-control" type="password" name="confirm" value="" >
+                                                </div>
+                                            </div>
+                                        </div>
                                 </div>
-                                <div class="form-group">
-                                    <label class ="col-sm-2 control-label" for="my-input">Name:</label>
-                                    <div class="col-sm-10">
-                                        <input  class="form-control" type="text" name="name" value="" >
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label class ="col-sm-2 control-label" for="my-input">Gender:</label>
-                                    <div class="col-sm-10">
-                                        <select  class="form-control" type="text" name="gender">
-                                                <option value="nam" selected="selected"> Nam</option>
-                                                <option value="nữ"> Nữ</option>
-                                        </select>
-                                    </div>
-                                </div>
-                                <!-- <div class="form-group">
-                                    <label class ="col-sm-2 control-label" for="my-input">Description:</label>
-                                    <div class="col-sm-10">
-                                        <textarea  class="form-control" type="text" name="description" ></textarea>
-                                    </div>
-                                </div> -->
-                               
-                                <div class="form-group">
-                                    <label class ="col-sm-2 control-label" for="my-input">Password:</label>
-                                    <div class="col-sm-10">
-                                        <input  class="form-control" type="password" name="password" value="" >
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label class ="col-sm-2 control-label" for="my-input">Confirm:</label>
-                                    <div class="col-sm-10">
-                                        <input  class="form-control" type="password" name="confirm" value="" >
-                                    </div>
-                                </div>
-                            </div>
+                            </form>
                         </div>
                     </div>
-                </form>
+                </div>                
             </div>
         </div>
         <%- include('../common/footer'); -%>
@@ -152,7 +159,7 @@
                 }
             });
         });
-        $('#ou').on('click', function(e) {
+        $('#saveStudent').on('click', function(e) {
             $("#frmAddStudent").submit();
         });
    });
